--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-169.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 台湾-1.07MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 85.208.108.90, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-6.56MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: gcfree2.galaxy-cloud.icu, port: 443, type: vmess, uuid: 8425f0fd-8cf9-42f3-a241-3fd44c591c8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree2.galaxy-cloud.icu}}
-  - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-2.05MB/s(Youtube:不良林), server: 85.208.108.90, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 85.208.108.90, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
