--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 85.208.108.90, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-6.56MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.05MB/s(Youtube:不良林), server: 85.208.108.90, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 85.208.108.90, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-323.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.65MB/s(Youtube:不良林), server: 85.208.108.90, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 85.208.108.90, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-895.6KB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-202.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.12MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
