--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-456.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.03MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.90MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-2.97MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇫🇷 法国-1.38MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 台湾-1.52MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-4.14MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-456.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
